# rocket-ssr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
.github/workflows/: rust.yml
data/: sqlite.db
src/: about_page.rs  api.rs  auth_context.rs  auth_handlers.rs  client.rs  index_page.rs  main.rs  message_page.rs  models.rs  passwordless.rs  persistence.rs  register_account_page.rs  request_guard.rs  session.rs  test_page.rs  tests.rs
src/api/: api.rs  auth_handlers.rs  mod.rs
src/auth/: auth_context.rs  client.rs  mod.rs
src/codec/: encrypt_decrypt.rs  mod.rs  test_encryption.rs
src/persistence/: mod.rs  persistence.rs
src/routes/: about_page.rs  index_page.rs  message_page.rs  mod.rs  register_account_page.rs  test_page.rs
static/: client-register.js  client-register.min.js  client-signin.js  client-signin.min.js  debug.js  encryption.js  style.css  style.min.css  toast.js
templates/: about.html.tera  base.html.tera  index.html.tera  message.html.tera  register_account.html.tera  test.html.tera  view_message.html.tera
