[package]
name = "rocket-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-include-static-resources = "0.10.5"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
passwords = "3.1.16"
serde = { version = "1.0.218", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.139"
uuid = { version = "1.15.1", features = ["v4"] }
